--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,6 @@
     "editor.formatOnSave": true,
     "workbench.startupEditor": "newUntitledFile",
     "prettier.singleQuote": true,
+    "editor.tabSize": 2,
+    "prettier.tabWidth": 2
 }
